--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,25 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+function playSound(e) {
+  // function(e): e is Event object data from addEventListener
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);// attribute selector audio[data-key="65"]
+  console.log(audio)
+  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+  if(!audio) return; // stop the function from running
+  audio.currentTime = 0; // rewind to start everytime keydown
+  audio.play();
+  key.classList.add('playing');
+}
 
+function removeTransition(e) {
+  if (e.propertyName !== 'transform') return;
+  this.classList.remove('playing');
+}
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+window.addEventListener('keydown',playSound);
 </script>
 
 
